--- a/index.html
+++ b/index.html
@@ -20,24 +20,27 @@
 <header class="container-fluid">
 	<div class="row">
 		<div class="col-md-7">
-		<img class="img img-responsive center-block" src="https://media.giphy.com/media/tm521PleKwiR2/giphy.gif" style="margin-left:auto;margin-right:auto;height:250px">
+		<img class="img img-responsive center-block" src="https://media.giphy.com/media/tm521PleKwiR2/giphy.gif" style="margin-left:auto;margin-right:auto;height:150px;width:400px">
 		</div>
 		<div class="col-md-5" style="padding-top:80px">
 			<div class="form-group" id="gif-form">
-	      		<input type="text" id="search-input">
+	      		<input type="text" id="search-input" placeholder="search">
 	      		<label for="search-input" id="add-gif"><i class="fa fa-search fa-3x" aria-hidden="true" style="color:white"></i></label>      			
     		</div>	
 		</div>
 	</div>
 </header>
+<!-- <div class="container-fluid" id="message-box">
+	Thank you for visiting my app! Start a search by entering 
+</div> -->
 <div class="container" id="main">
 	<div class="row">
-		<div class="container" id="button-container"></div>		
+		<div class="container" id="button-container" style="margin-bottom:10px"></div>		
 	</div>
 	<div class="row">
-		<div class="col-s-6 col-s-push-6 col-md-3 col-md-push-9">
+		<div class="col-s-6 col-s-push-6 col-md-3 col-md-push-9" style="border:1px solid grey">
 			<div class="row">
-				<h4>Saved Images</h4>
+				<h3>Bookmarked Images</h3>
 			</div>
 			<div class="row" id="saved">				
 			</div>
