lazy load and block invalid input

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<!-- Animation javascript file -->
-	<script src="assets/anime.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">	
 </head>
 <body>
 <header class="container-fluid">
 	<div class="row">
 		<div class="col-md-7">
-		<img class="img img-responsive center-block" src="https://media.giphy.com/media/tm521PleKwiR2/giphy.gif" style="margin-left:auto;margin-right:auto;height:150px;width:400px">
+			<a href="index.html">
+				<img class="img img-responsive center-block" src="https://media.giphy.com/media/tm521PleKwiR2/giphy.gif" style="margin-left:auto;margin-right:auto;height:150px;width:400px">
+			</a>
 		</div>
 		<div class="col-md-5" style="padding-top:80px">
 			<div class="form-group" id="gif-form">
@@ -45,12 +46,15 @@
 			<div class="row" id="saved">				
 			</div>
 		</div>
-		<div class="col-s-6 col-s-pull-6 col-md-9 col-md-pull-3" id="giphy-info">
+		<div class="col-s-6 col-s-pull-6 col-md-9 col-md-pull-3">
+			<div class="row" id="giphy-info"></div>
+			<div class="row" id="loadmore"></div>
 		</div>
 	</div>
 </div>
 
 <script src="assets/app.js"></script>
+
 
 </body>
 </html>
