--- a/index.html
+++ b/index.html
@@ -31,24 +31,21 @@
 		</div>
 	</div>
 </header>
-<!-- <div class="container-fluid" id="message-box">
-	Thank you for visiting my app! Start a search by entering 
-</div> -->
 <div class="container" id="main">
 	<div class="row">
 		<div class="container" id="button-container" style="margin-bottom:10px"></div>		
 	</div>
 	<div class="row">
-		<div class="col-s-6 col-s-push-6 col-md-3 col-md-push-9" style="border:1px solid grey">
-			<div class="row">
-				<h3>Bookmarked Images</h3>
+		<div class="col-s-6 col-s-push-6 col-md-3 col-md-push-9" id="bookmark-container" style="border:1px solid grey;margin-bottom:10px">
+			<div class="row bg-success">
+				<h3>Bookmarked Gifs</h3><i class="fa fa-trash-o btn" aria-hidden="true" id="bookmarktrash" style="float:right"></i>
 			</div>
 			<div class="row" id="saved">				
 			</div>
 		</div>
 		<div class="col-s-6 col-s-pull-6 col-md-9 col-md-pull-3">
 			<div class="row" id="giphy-info"></div>
-			<div class="row" id="loadmore"></div>
+			<div class="row" id="loadmore" style="margin-bottom:10px"></div>
 		</div>
 	</div>
 </div>
