--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Yantramanav" rel="stylesheet">
 
 <!-- 	<link rel="stylesheet" href="assets/css/reset.css"> -->
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -20,10 +21,10 @@
 	<div class="row">
 		<div class="col-md-7">
 			<a href="index.html">
-				<img class="img img-responsive center-block" src="https://media.giphy.com/media/tm521PleKwiR2/giphy.gif" style="margin-left:auto;margin-right:auto;height:150px;width:400px">
+				<img class="img img-responsive center-block" id="header" src="https://media.giphy.com/media/tm521PleKwiR2/giphy.gif">
 			</a>
 		</div>
-		<div class="col-md-5" style="padding-top:80px">
+		<div class="col-md-5" id="search">
 			<div class="form-group" id="gif-form">
 	      		<input type="text" id="search-input" placeholder="search">
 	      		<label for="search-input" id="add-gif"><i class="fa fa-search fa-3x" aria-hidden="true" style="color:white"></i></label>      			
